Bug 842065: Remove no-longer-necessary method nsIFrame::StyleDataExternal(). r=dbaron